<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="?android:attr/actionBarSize"
		>

	<ImageView
			android:layout_width="120dp"
			android:layout_height="178dp"
			android:id="@+id/leftImageView"
			android:layout_gravity="center|top"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="100dp"
			android:layout_alignParentTop="true"
			android:layout_marginTop="30dp"
			android:src="@drawable/faces_girls_adriana_lima"
			android:adjustViewBounds="false"
			android:background="#8b0000"
			android:clickable="true"
			android:onClick="onLeftClick"/>

	<ImageView
			android:layout_width="120dp"
			android:layout_height="178dp"
			android:id="@+id/rightImageView"
			android:layout_gravity="center|top"
			android:layout_alignParentRight="true"
			android:layout_alignTop="@+id/leftImageView"
			android:layout_marginRight="100dp"
			android:src="@drawable/faces_girls_alessandra_ambrosio"
			android:background="#8b0000"
			android:onClick="onRightClick"
			android:clickable="true"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/who_is_hotter"
			android:id="@+id/hotterTextView"
			android:layout_centerHorizontal="true"
			android:layout_above="@+id/leftImageView"
			android:layout_alignParentBottom="true"
			android:layout_alignParentTop="true"
			android:textStyle="bold"
			/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/or"
			android:id="@+id/orTextView"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Adriana Lima"
			android:id="@+id/leftTextView"
			android:layout_below="@+id/leftImageView"
			android:layout_alignRight="@+id/leftImageView"
			android:layout_alignLeft="@+id/leftImageView"
			android:textSize="12dp"
			android:textAlignment="center"
			android:layout_alignBaseline="@+id/leftImageView"
			android:gravity="center"
			android:textColor="#5fa0af"
			android:onClick="onLeftClick"
			android:linksClickable="false"
			android:clickable="true"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Alessandra Ambrosio"
			android:id="@+id/rightTextView"
			android:layout_below="@+id/rightImageView"
			android:layout_alignRight="@+id/rightImageView"
			android:layout_alignLeft="@+id/rightImageView"
			android:textSize="12dp"
			android:textAlignment="center"
			android:layout_alignBaseline="@+id/rightImageView"
			android:gravity="center"
			android:textColor="#5fa0af"
			android:clickable="true"
			android:onClick="onRightClick"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="-->"
			android:textSize="18dp"
			android:id="@+id/nextTextView"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/leftTextView"
			android:textColor="#000087"
			android:clickable="true"
			android:onClick="onNextClick"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/choose_one_more"
			android:textSize="12dp"
			android:id="@+id/messageTextView"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/nextTextView"
			android:textColor="#8b0000"
			android:visibility="invisible"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/celebrities_boys"
			android:id="@+id/celebritiesBoysTextView"
			android:layout_below="@+id/nextTextView"
			android:layout_alignRight="@+id/orTextView"
			android:textSize="12dp"
			android:textAlignment="center"
			android:gravity="center"
			android:textColor="#ff0000"
			android:layout_alignParentBottom="true"
			android:layout_marginRight="20dp"
			android:onClick="onCelebritiesBoysClick"
			android:clickable="true"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/celebrities_girls"
			android:id="@+id/celebritiesGirlsTextView"
			android:layout_below="@+id/nextTextView"
			android:layout_alignLeft="@+id/orTextView"
			android:textSize="12dp"
			android:textAlignment="center"
			android:gravity="center"
			android:textColor="#ff4093"
			android:layout_alignParentBottom="true"
			android:layout_marginLeft="20dp"
			android:clickable="true"
			android:onClick="onCelebritiesGirlsClick"/>

</RelativeLayout>

